// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nothing removed in assetless doc 1`] = `
Object {
  "_id": "plain",
  "_type": "bike",
  "name": "Broom",
}
`;

exports[`Nothing rewritten in assetless doc 1`] = `
Object {
  "_id": "plain",
  "_type": "bike",
  "name": "Broom",
}
`;

exports[`Rewritten asset for doc1 1`] = `
Object {
  "_id": "doc1",
  "_type": "bike",
  "image": Object {
    "_sanityAsset": "image@file://./images/idx_abc123-3360x840.png",
  },
  "name": "Scooter",
}
`;

exports[`Rewritten asset for doc2 1`] = `
Object {
  "_id": "doc2",
  "_type": "bike",
  "image": Object {
    "_sanityAsset": "image@file://./images/idx_abc123-3360x840.png",
  },
  "name": "Dupe",
}
`;

exports[`Rewritten asset for doc3 1`] = `
Object {
  "_id": "doc3",
  "_type": "bike",
  "image": Object {
    "_sanityAsset": "image@file://./images/idx_abc456-310x282.jpg",
  },
  "name": "Tandem",
}
`;

exports[`doc1 with no image asset 1`] = `
Object {
  "_id": "doc1",
  "_type": "bike",
  "name": "Scooter",
}
`;

exports[`doc2 with no image asset 1`] = `
Object {
  "_id": "doc2",
  "_type": "bike",
  "name": "Dupe",
}
`;

exports[`doc3 with no image asset 1`] = `
Object {
  "_id": "doc3",
  "_type": "bike",
  "name": "Tandem",
}
`;
